# swift-sdl2-windows-example

./: README.md
Source/: CMakeLists.txt
Source/Application/: CMakeLists.txt  main.swift
Source/CSDL2/: CMakeLists.txt  module.modulemap  shim.c
